# py-epc-qr

./: pyproject.toml
py_epc_qr/: checks.py  transaction.py
