[tool.poetry]
name = "py-epc-qr"
version = "0.1.4"
description = "Generate EPC-compatible QR codes for wire transfers"
authors = ["timueh <t.muehlpfordt@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timueh/py-epc-qr"
repository = "https://github.com/timueh/py-epc-qr"
documentation = "https://github.com/timueh/py-epc-qr"

[tool.poetry.dependencies]
python = "^3.9"
qrcode = {extras = ["pil"], version = "^8.2"}
pyyaml = "^6.0.3"
typer = "^0.20.0"
schwifty = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
epcqr = "py_epc_qr.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
