[project]
name = "py-epc-qr"
version = "0.1.5"
description = "Generate EPC-compatible QR codes for wire transfers"
authors = [
    {name = "kmille", email = "github@androidloves.me"}
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/timueh/py-epc-qr"
repository = "https://github.com/timueh/py-epc-qr"
documentation = "https://github.com/timueh/py-epc-qr"
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = "^3.10"
qrcode = {extras = ["pil"], version = "^8.2"}
pyyaml = "^6.0.3"
typer = "^0.24.1"
schwifty = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
epcqr = "py_epc_qr.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
